--- a/cartelera.html
+++ b/cartelera.html
@@ -20,11 +20,8 @@
         <h1>CARTELERA</h1>
     </header>
     
-    <div class="gallery" id="gallery">
-        <!-- Las películas se cargarán aquí dinámicamente -->
-    </div>
+    <div class="gallery" id="gallery"></div>
 
-    <!-- Popup -->
     <div class="popup" id="popup">
         <div class="popup-content">
             <span class="close-btn" id="close-popup">&times;</span>
